--- a/01-prompting-for-effective-reasoning-and-planning/05-lesson-3-prompt-instruction-refinement.ipynb
+++ b/01-prompting-for-effective-reasoning-and-planning/05-lesson-3-prompt-instruction-refinement.ipynb
@@ -793,8 +793,8 @@
     "|--------|-----------------|----------------|\n",
     "| Format | Simple key-value pairs | Record<definition, { classification, explanation, critical_ingredients }> |\n",
     "| Accuracy | Not measured | Very accurate, even specifying when it can't reach an answer |\n",
-    "| Transparency | No explanation of reasoning |  |\n",
-    "| Handling Ambiguity | Inconsistent | ********** |"
+    "| Transparency | No explanation of reasoning | clear explanation why it reached a classification |\n",
+    "| Handling Ambiguity | Inconsistent | able to handle ambiguity and provide reasoning |"
    ]
   },
   {
