--- a/02-introduction-to-agentic-workflows/lesson-2-Understanding_Agentic_Workflows/exercises/starter/lesson2.ipynb
+++ b/02-introduction-to-agentic-workflows/lesson-2-Understanding_Agentic_Workflows/exercises/starter/lesson2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "66a1cfdf-835a-46e7-b622-94557ecb5f16",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,58 @@
       "- Thursday: cardio (low, 30 min)\n",
       "- Friday: rest (none, 0 min)\n",
       "- Saturday: rest (none, 0 min)\n",
-      "- Sunday: rest (none, 0 min)\n"
+      "- Sunday: rest (none, 0 min)\n",
+      "\n",
+      "[LLM Agent]\n",
+      "Reasoning: The plan is designed to help the client manage weight and reduce stress, considering their fitness level, time constraints, and preference for home workouts. The workouts are balanced between cardio and strength training, with a focus on low to moderate intensity to accommodate the client's fitness level.\n",
+      "- Monday: cardio (low, 30 min)\n",
+      "  30 minutes of low-intensity steady state cardio. This could be a brisk walk or light jog.\n",
+      "- Tuesday: strength training (moderate, 30 min)\n",
+      "  Full-body strength training using bodyweight exercises. Include exercises like squats, lunges, push-ups, and planks.\n",
+      "- Wednesday: yoga (low, 30 min)\n",
+      "  A gentle yoga routine focusing on flexibility and stress reduction.\n",
+      "- Thursday: cardio (moderate, 30 min)\n",
+      "  30 minutes of moderate-intensity cardio. This could be a faster-paced walk or jog, or a home workout video.\n",
+      "- Friday: strength training (moderate, 30 min)\n",
+      "  Another full-body strength training session, focusing on different exercises to keep the routine varied.\n",
+      "- Saturday: rest (low, 0 min)\n",
+      "  Rest day. Light stretching or yoga can be done if desired.\n",
+      "- Sunday: yoga (low, 30 min)\n",
+      "  Another gentle yoga routine to end the week, focusing on relaxation and stress reduction.\n",
+      "Considerations: The plan avoids high-intensity workouts to respect the client's fitness level. All workouts can be done at home with minimal equipment, and are designed to fit into a 30-minute time frame. The inclusion of yoga helps with stress reduction and flexibility.\n",
+      "\n",
+      "--- User 2: U002 ---\n",
+      "Age: 55 | Fitness Level: 3/5\n",
+      "Goals: joint mobility, strength building\n",
+      "Preferences: outdoor activities, swimming\n",
+      "Limitations: mild joint stiffness\n",
+      "\n",
+      "[Deterministic Agent]\n",
+      "- Monday: mobility exercises (moderate, 40 min)\n",
+      "- Tuesday: strength training (moderate, 40 min)\n",
+      "- Wednesday: mobility exercises (moderate, 40 min)\n",
+      "- Thursday: strength training (moderate, 40 min)\n",
+      "- Friday: mobility exercises (moderate, 40 min)\n",
+      "- Saturday: rest (none, 0 min)\n",
+      "- Sunday: rest (none, 0 min)\n",
+      "\n",
+      "[LLM Agent]\n",
+      "Reasoning: The plan is designed to improve joint mobility and build strength, while accommodating the client's preference for outdoor activities and swimming. It also takes into account the client's mild joint stiffness.\n",
+      "- Monday: swimming (moderate, 45 min)\n",
+      "  Swimming laps at a steady pace. Focus on smooth, controlled movements to promote joint mobility.\n",
+      "- Tuesday: strength training (low, 30 min)\n",
+      "  Resistance band exercises focusing on upper body strength. Include movements that promote joint mobility.\n",
+      "- Wednesday: cardio (moderate, 45 min)\n",
+      "  Brisk outdoor walk. Maintain a pace that increases heart rate but still allows for conversation.\n",
+      "- Thursday: strength training (low, 30 min)\n",
+      "  Resistance band exercises focusing on lower body strength. Include movements that promote joint mobility.\n",
+      "- Friday: swimming (moderate, 45 min)\n",
+      "  Swimming laps at a steady pace. Focus on smooth, controlled movements to promote joint mobility.\n",
+      "- Saturday: rest (low, 0 min)\n",
+      "  Rest day. Light stretching or yoga for relaxation is optional.\n",
+      "- Sunday: cardio (moderate, 45 min)\n",
+      "  Brisk outdoor walk. Maintain a pace that increases heart rate but still allows for conversation.\n",
+      "Considerations: The plan avoids high-impact exercises to respect the client's joint stiffness. It includes two rest days to allow for recovery and adaptation. The duration of the workouts is kept manageable to encourage consistency and adherence to the plan.\n"
      ]
     }
    ],
