--- a/02-introduction-to-agentic-workflows/lesson-3-Agentic_Workflow_Modeling/demo/mermaid_generator.ipynb
+++ b/02-introduction-to-agentic-workflows/lesson-3-Agentic_Workflow_Modeling/demo/mermaid_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "42f94692-65f5-4cdb-9f41-a1fdb7d9ab3e",
    "metadata": {},
    "outputs": [
@@ -53,6 +53,8 @@
     "    diagrams: list[str] = []\n",
     "\n",
     "    for filepath in root.rglob(\"*\"):\n",
+    "        if any(part.startswith(\".ipynb_checkpoints\") for part in filepath.parts):\n",
+    "            continue\n",
     "        if filepath.is_file() and filepath.suffix.lower() in allowed_ext:\n",
     "            try:\n",
     "                mermaid_code = filepath.read_text(encoding=\"utf-8\")\n",
@@ -68,6 +70,7 @@
     "                )\n",
     "            except Exception as exc:  # keep going even if one file fails\n",
     "                print(f\"⚠️  Skipped {filepath}: {exc}\")\n",
+    "        \n",
     "\n",
     "    if not diagrams:\n",
     "        print(\"No matching files found – nothing to do.\")\n",
