--- a/02-introduction-to-agentic-workflows/lesson-10-Lesson_Overview/mermaid_gen.ipynb
+++ b/02-introduction-to-agentic-workflows/lesson-10-Lesson_Overview/mermaid_gen.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "698123da-428e-4d63-ac45-a54c7f930665",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Mermaid gallery written to /Users/claudio/code/notes/udacity--agentic-ai/02-introduction-to-agentic-workflows/lesson-10-Lesson_Overview/all_mermaid_diagrams.html\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -74,6 +82,14 @@
     "if __name__ == \"__main__\":\n",
     "    build_mermaid_gallery()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "412fcbf9-b303-40a8-8bea-6d49764f5655",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
